[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = .tox,.git,docs,venv,.venv

[mypy]
ignore_missing_imports = true

[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests

[coverage:run]
source = enc_dotenv

[coverage:paths]
source =
    src/enc_dotenv
    .tox/*/lib/python*/site-packages/enc_dotenv

[coverage:report]
show_missing = True
